# test_bno080

./: .gitignore  Cargo.toml  README.md  openocd.cfg  openocd.gdb  stm32f401_memory.x
.cargo/: config
src/: main.rs
