[package]
name = "test_bno080"
version = "0.1.0"
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "a test app for bno080 using stm32f401"

[dependencies]
#panic-semihosting = "0.5"
#cortex-m-semihosting = "0.3.5"
embedded-hal = {version = "0.2.3", features = ["unproven"]  }
cortex-m-rtfm = "0.5.1"
stm32f4xx-hal = { version =" 0.6.0", features = ["stm32f401", "rt"] }

bno080 = { path = "../BNO080" }
#bno080 = { git = "https://github.com/tstellanova/bno080.git" }


#cortex-m-log = { version = "0.6.1", features = ["log-integration", "itm", "semihosting"] }
cortex-m = "^0.6.0"
panic-itm = "~0.4.1"
